--- a/TPv6.html
+++ b/TPv6.html
@@ -29,7 +29,7 @@
     <span id="pc"><a href="#quienes-somos" class= "menuitem" target="_self">Quienes somos</a></span>
  <span><a href="#galeria" class="menuitem" target="_self"> Galeria </a></span>
     <span id="pc"><a href="../TP/itinerario2.html" class= "menuitem" target="_self">Itinerario</a></span>
-    <span id="pc"><a href="../TP/Reseñas.html" class= "menuitem" target="_self">Reseñas</a></span>
+    <span id="pc"><a href="../TP/Resenas.html" class= "menuitem" target="_self">Reseñas</a></span>
     <span><a href="#contacto" class="menuitem" target="_self">Contacto</a></span>
   
 </header>
