--- a/itinerario2.html
+++ b/itinerario2.html
@@ -26,7 +26,7 @@
             <span id="pc"><a href="../TP/TPv6.html" class= "menuitem" target="_self">Quienes somos</a></span>
             <span><a href="../TP/TPv6.html" class="menuitem" target="_self"> Galeria </a></span>
             <span id="pc"><a href="#quienes-somos" class= "menuitem" target="_self">Itinerario</a></span>
-            <span id="pc"><a href="../TP/Reseñas.html" class= "menuitem" target="_self">Reseñas</a></span>
+            <span id="pc"><a href="../TP/Resenas.html" class= "menuitem" target="_self">Reseñas</a></span>
             <span><a href="../TP/TPv6.html" class="menuitem" target="_self">Contacto</a></span>
         </nav>
         </header>
