--- a/TPv6.html
+++ b/TPv6.html
@@ -206,6 +206,6 @@ Te lo contanos todo en el itinerario. ¡Pasa a verlo!</p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script> src= "java_1.js"</script>
+<script src= "java_1.js"></script>
 </body>
 </html>
