--- a/itinerario2.html
+++ b/itinerario2.html
@@ -39,7 +39,7 @@
 
 
 
-<div class="todosputos">
+<div class="todos">
    <main class="container">
          <h1 class="centro">Salidas a coordinar</h1><br><br>  
     <article id="quienes-somos">
@@ -169,14 +169,14 @@
     <h2>Recorrido</h2> <br>
 
 <ul class= "maps">
-    <li><a target="iframeputo" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d372489.30926923675!2d12.344666949442699!3d45.436866081801476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1daf1d63d89%3A0x7ba3c6f0bd92102f!2sVenecia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632689941220!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+    <li><a target="iframep" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d372489.30926923675!2d12.344666949442699!3d45.436866081801476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1daf1d63d89%3A0x7ba3c6f0bd92102f!2sVenecia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632689941220!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
         Venecia </a></li>
-<li> <a target="iframeputo" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92180.89711396353!2d11.170927730050822!3d43.780060708402765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132a56a680d2d6ad%3A0x93d57917efc72a03!2sFlorencia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690287649!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">Florencia</a></li>
-<li> <a target="iframeputo" href= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11582.519169742643!2d11.027834483130475!3d43.468325539120634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132a3c3831446b6f%3A0x4c4ef55452f54491!2s53037%20San%20Gimignano%2C%20Siena%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690730270!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"> San Gimignano - Siena</a></li>
-<li> <a target="iframeputo" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190028.2570939577!2d12.395912670730818!3d41.91024148781598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2sRoma%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690913947!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"> Roma </a></li>
+<li> <a target="iframep" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92180.89711396353!2d11.170927730050822!3d43.780060708402765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132a56a680d2d6ad%3A0x93d57917efc72a03!2sFlorencia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690287649!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">Florencia</a></li>
+<li> <a target="iframep" href= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11582.519169742643!2d11.027834483130475!3d43.468325539120634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132a3c3831446b6f%3A0x4c4ef55452f54491!2s53037%20San%20Gimignano%2C%20Siena%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690730270!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"> San Gimignano - Siena</a></li>
+<li> <a target="iframep" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190028.2570939577!2d12.395912670730818!3d41.91024148781598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2sRoma%2C%20Italia!5e0!3m2!1ses!2sar!4v1632690913947!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"> Roma </a></li>
 </ul><br>
 
-<iframe name="iframeputo" id="iframeputo" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d372489.30926923675!2d12.344666949442699!3d45.436866081801476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1daf1d63d89%3A0x7ba3c6f0bd92102f!2sVenecia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632689941220!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+<iframe name="iframep" id="iframep" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d372489.30926923675!2d12.344666949442699!3d45.436866081801476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1daf1d63d89%3A0x7ba3c6f0bd92102f!2sVenecia%2C%20Italia!5e0!3m2!1ses!2sar!4v1632689941220!5m2!1ses!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
 </iframe>
 
 </div>
