--- a/TPv6.html
+++ b/TPv6.html
@@ -29,7 +29,7 @@
     <span id="pc"><a href="#quienes-somos" class= "menuitem" target="_self">Quienes somos</a></span>
  <span><a href="#galeria" class="menuitem" target="_self"> Galeria </a></span>
     <span id="pc"><a href="../TP/itinerario2.html" class= "menuitem" target="_self">Itinerario</a></span>
-    <span id="pc"><a href="../TP/Resenas.html" class= "menuitem" target="_self">Reseñas</a></span>
+    <span id="pc"><a href="../TP/Reseñas.html" class= "menuitem" target="_self">Reseñas</a></span>
     <span><a href="#contacto" class="menuitem" target="_self">Contacto</a></span>
   
 </header>
@@ -125,9 +125,9 @@ Te lo contanos todo en el itinerario. ¡Pasa a verlo!</p>
         <hr><br><br>
         <div>
           <label for="nombre" class="titulo">Nombre:</label>
-          <input type="text" name="nombre" id="nombre" class="campo" maxlength="15" pattern="[A-Za-z]{2,15}" required><br><br>
+          <input type="text" name="nombre" id="nombre" class="campo" maxlength="15" pattern="[A-Za-z]{2 15}" required><br><br>
           <label for="apellido" class="titulo">Apellido:</label>
-          <input type="text" name="apellido" id="apellido" class="campo" maxlength="15" pattern="[A-Za-z]{2,15}" required><br><br>
+          <input type="text" name="apellido" id="apellido" class="campo" maxlength="15" pattern="[A-Za-z]{2 15}" required><br><br>
           
           <label for="dia" class="titulo">Fecha de nacimiento:</label>
           <span class="campo">
@@ -165,24 +165,28 @@ Te lo contanos todo en el itinerario. ¡Pasa a verlo!</p>
         <textarea class="form-control" aria-label="With textarea"></textarea>
       </div><br><br>
 
+<label for="mail" class="titulo">Email:</label>
+<input type="text" name="correo" id="correo" 
+onClick="pruebaemail(correo.value);" required ><br><br> 
 
-      <label for="mail" class="titulo">Email:</label>
-      <input type="mail" name="mail" id="mail" class="campo" placeholder="Email" onclick="valida_mail()" required><br><br>
+
 
 
      <div class="campo">
-            <input type="checkbox" id="mayor" name="mayor" value="mayor">
+            <input type="checkbox" id="mayor" name="mayor" value="mayor" required>
             <label for="mayor">Tengo mas de 18 años!.</label>
       </div><br>
-            <input type="submit" name="send" id="send" value="Enviar">
+
+  <input type="submit" name="send" id="send" value="Enviar">
             <input type="reset" name="clear" id="clear" value="Borrar">
+
           </span><br><br><hr>
        
-      <div><p>
-        <strong>
-        ¡¡¡En Breve nos estaremos comunicando con vos, Muchas gracias por contactarte con nosotros!!!!
-        </p></strong></div>
+      <div>
 
+    <button id="botonWindowOpen"> Adelante!!!
+
+        </button></div>
 
       </form>
 
